--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
             <nav class="mobile mobile-container">
                 <img src="resources/images/ic-logo.svg" alt="Colmar Logo">
-                <img src="resources/images/ic-on-campus.svg">
-                <img src="resources/images/ic-online.svg">
-                <img src="resources/images/ic-login.svg">
+                <a href="#" target="_blank"><img src="resources/images/ic-on-campus.svg"></a>
+                <a href="#" target="_blank"> <img src="resources/images/ic-online.svg"></a>
+                <a href="#" target="_blank"><img src="resources/images/ic-login.svg"></a>   
             </nav>
         </header>
         
